# GitTesting

./: .gitattributes  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
